Global rework external-api + xml